--- a/applications/1medcloud/views/default/index copy.html
+++ b/applications/1medcloud/views/default/index copy.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<link href="{{=URL('static','css','index.css')}}" rel="stylesheet"
+<!-- <link href="{{=URL('static','css','index.css')}}" rel="stylesheet" />-->
 <title>Untitled Document</title>
 </head>
 
