--- a/applications/1medcloud/views/default/index.html
+++ b/applications/1medcloud/views/default/index.html
@@ -12,7 +12,7 @@
 <h1>Welcome</h1>
 <div id="signin">
 <h2>Sign In</h2>
-<form name="patientsignin" action="http://www.1medcloud.com/init/default/mobile_user_login" method="post">
+<form name="patientsignin" action="http://www.1medcloud.com/1medcloud/default/mobile_user_login" method="post">
 <table>
 <tr><td><input class="inputtext" type="email" name="email" placeholder="Email"/></td></tr>
 <tr><td><input class="inputtext" type="password" name="password" placeholder="Password"/></td></tr>
@@ -22,7 +22,7 @@
 </div>
 <div id="signup">
 <h2>Join today!</h2>
-<form name="patientsignup" action="http://www.1medcloud.com/init/default/mobile_user_register" method="post">
+<form name="patientsignup" action="http://www.1medcloud.com/1medcloud/default/mobile_user_register" method="get">
 <table>
 <tr><td><input class="inputtext" type="email" name="email" placeholder="Enter your Email" /></td></tr>
 <tr><td><input class="inputtext" type="password" name="password" placeholder="Password" /></td></tr>
