--- a/applications/1medcloud/views/default/index.html
+++ b/applications/1medcloud/views/default/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <link href="index.css" rel="stylesheet" />
 <script src="signinsignup.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
 <title>Untitled Document</title>
 </head>
 
@@ -12,17 +13,20 @@
 <h1>Welcome</h1>
 <div id="signin">
 <h2>Sign In</h2>
-<form name="patientsignin" action="http://www.1medcloud.com/1medcloud/default/mobile_user_login" method="post">
+<p id="signinfielderror" style="display:none">Please enter your email and password</p>
+<p id="signincomboerror" style="display:none">The email/password combination is incorrect</p>
+<form name="patientsignin" action="mobile_user_login" method="post">
 <table>
 <tr><td><input class="inputtext" type="email" name="email" placeholder="Email"/></td></tr>
 <tr><td><input class="inputtext" type="password" name="password" placeholder="Password"/></td></tr>
-<tr><td><button onClick="psignin()">Sign In</button></td></tr>
+<tr><td><input type="button" value="Sign In" id="psignin"/><script type="text/javascript">$('#psignin').on("click", function(){ document.getElementById(patientsignin).submit(); alert($("#patientsignin").serialize());});</script></td></tr>
 </table>
 </form>
 </div>
 <div id="signup">
 <h2>Join today!</h2>
-<form name="patientsignup" action="http://www.1medcloud.com/1medcloud/default/mobile_user_register" method="get">
+<p><b id="signuperror"></b></p>
+<form id="patientsignup">
 <table>
 <tr><td><input class="inputtext" type="email" name="email" placeholder="Enter your Email" /></td></tr>
 <tr><td><input class="inputtext" type="password" name="password" placeholder="Password" /></td></tr>
@@ -30,7 +34,28 @@
 <tr><td><input class="inputtext" name="firstname" placeholder="First Name" /></td></tr>
 <tr><td><input class="inputtext" name="username" placeholder="Middle Initial" /></td></tr>
 <tr><td><input class="inputtext" name="lastname" placeholder="Last Name" /></td></tr>
-<tr><td><button onClick="psignup()">Sign Up</button></td></tr>
+<tr><td><button id="psignup">Sign Up</button></td></tr>
+<script type="text/javascript">$("#psignup").on("click",function() {
+    $.ajax({
+           type: "POST",
+           url: "mobile_user_register",
+           data: $("#patientsignup").serialize(), // serializes the form's elements.
+           success: function(response)
+           {
+			   result=JSON.parse(response)
+               //alert(result.status);
+			   var status=result['status'];
+			   if (status=="success") {
+				    window.location="profile";
+			   }
+			   if (status=="exist") {
+				   document.getElementById('signuperror').innerHTML="That email has been registered";
+			   }
+           }
+         });
+
+    return false; // avoid to execute the actual submit of the form.
+});</script>
 </table>
 </form>
 </div>
