--- a/applications/1medcloud/views/default/index.html
+++ b/applications/1medcloud/views/default/index.html
@@ -3,7 +3,6 @@
 <head>
 <meta charset="UTF-8">
 <link href="index.css" rel="stylesheet" />
-<script src="signinsignup.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
 <title>Untitled Document</title>
 </head>
@@ -38,7 +37,7 @@
 <script type="text/javascript">$("#psignup").on("click",function() {
     $.ajax({
            type: "POST",
-           url: "mobile_user_register",
+           url: "mobile_patient_register",
            data: $("#patientsignup").serialize(), // serializes the form's elements.
            success: function(response)
            {
